# altdeque

./: Cargo.toml  README.md
benches/: bench.rs
src/: drain.rs  into_iter.rs  lib.rs  macros.rs  raw_vec.rs  tests.rs
