[package]
name = "altdeque"
version = "1.0.0"
edition = "2021"
documentation = "https://docs.rs/altdeque/"
repository = "https://github.com/alexthill/altdeque"
license = "Apache-2.0"
description = "An alternative deque implementation."
keywords = ["queue", "deque"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
